:bug: fix: overlay e z-index de elementos

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -16,7 +16,7 @@
 
 .slideshow {
   width: 50%;
-  z-index: 9999;
+  z-index: 1;
 }
 
 .hero {
@@ -73,7 +73,10 @@
   }
 
   .headerContent{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
     width: 100%;
     height: 100%;
     padding: 5rem;
@@ -83,6 +86,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 2rem;
     letter-spacing: 0rem;
   }
 
