--- a/components/cart/cartIcon/styles.module.css
+++ b/components/cart/cartIcon/styles.module.css
@@ -13,7 +13,7 @@
   background-position: center;
   cursor: pointer;
   transition: transform 0.3s ease, background 0.3s ease;
-  z-index: 1000;
+  z-index: 2;
 }
 
 .floatingCart:hover {
