--- a/components/cart/cartModal/styles.module.css
+++ b/components/cart/cartModal/styles.module.css
@@ -7,7 +7,7 @@
   background: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: flex-end;
-  z-index: 9999;
+  z-index: 2;
   animation: fadeIn 0.3s ease;
 }
 
