--- a/components/cart/checkoutModal/styles.module.css
+++ b/components/cart/checkoutModal/styles.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 8px;
+  z-index: 100000;
 }
 
 .checkoutHeader {
